Refactor poms: move surefire plugin to the parent pom. Closes #9